# harness-core

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  harness.yaml  init.sh  pyproject.toml  telemetry.json
.harness/: check_purity.py  verify.sh
.harness/plugins/architecture/: check_purity.py
.harness/plugins/git/: auto_commit.sh
.harness/plugins/python/: run_linter.sh  run_tests.sh  run_typecheck.sh  setup_env.sh
docs/: ARCHITECTURE.md  AUDIT_REPORT_V1.md  METRICS.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md
docs/design-docs/: core-beliefs.md
docs/exec-plans/: feature_list.json  progress.md  progress.txt
tests/: test_check_purity.py  test_skeleton.py
